OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/Email_Communication_Log__c.object-meta.xml
<CustomObject>
    <description>Actively tracks onboarding, training email, and welcome emails via email templateId sent to contacts.</description>
    <label>Email Communication Log</label>
    <nameField>
        <displayFormat>ECL-{00000}</displayFormat>
        <label>Email Communication Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Communication Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>