OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional; denormalized from Contact</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email Communication Logs</relationshipLabel>
    <relationshipName>Email_Communication_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>