OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who the email was sent to</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Communication Logs</relationshipLabel>
    <relationshipName>Email_Communication_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>