OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <description>Stores the EmailMessage.Id via APEX in a flow.</description>
    <label>Email Message Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>