OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/fields/HTML_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Body__c</fullName>
    <description>For rich audit/debug</description>
    <label>HTML Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>