OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties this log to the onboarding flow</description>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Email Communication Logs</relationshipLabel>
    <relationshipName>Email_Communication_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>