OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/fields/Sent_Via__c.field-meta.xml
<CustomField>
    <fullName>Sent_Via__c</fullName>
    <label>Sent Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>