OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Copied from EmailMessage</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>