OnboardingV2Minimal/force-app/main/default/objects/Email_Communication_Log__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <description>Copied from EmailMessage</description>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>